fixed bugs on frameworks